tdf#120291 Attaching a connector makes draw Draw busy-loop

regression from
    commit ffe84f49270e0a8818365ca7d1fd5242abff5562
    remove SdrObject::GetHdl in favour of AddToHdlList

Change-Id: Idb15b976f6e1fcb6ffeda933ffbec96d59e6f155